fix: fix broken styles

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,10 @@
+html, body, #root, .app-loader {
+  height: 100%;
+}
 .App {
   text-align: center;
 }
 
 .App-body {
   padding: 2rem;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(-30deg); }
-  to { transform: rotate(30deg); }
 }
